--- a/index.html.twig
+++ b/index.html.twig
@@ -1,3 +1,4 @@
+<!-- LOCAL -->
 <!DOCTYPE html>
 <html lang="es-ES">
 <head>
@@ -160,9 +161,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <!-- <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">20% Dto - Código: <span class="font-weight-bold">ENER20</span></strong><br>Último día</p> -->
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
-                <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">¡Desafía tus límites!</h3>
+                <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">#ConquistaTuCuerpo</h3>
+                <!-- <h3 class="py-1 py-sm-3 py-lg-5 lead text-white home-subtitle">¡Desafía tus límites!</h3> -->
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a></p>
                 </div>
