--- a/clases-yoga.html.twig
+++ b/clases-yoga.html.twig
@@ -91,6 +91,15 @@
     .border-bt-primary-1{
         border-bottom: 24px solid #e57532;
     }
+    header.bg-landing{        
+        background-image: url(/homes/img/img-landing/yoga_portada-movil.jpg);
+        background-position: top center;
+        background-size: cover;
+        min-height: 90vh;
+    }
+    header.bg-landing:before{
+        min-height: 90vh;
+    }
     .video-section{
         margin-top: -10rem;
     }
@@ -131,7 +140,7 @@
         }
     }
     @media (max-width: 767px){
-        header.bg-landing{        
+        /*header.bg-landing{        
             background-image: url(/homes/img/img-landing/yoga_portada-movil.jpg);
             background-position: top center;
             background-size: cover;
@@ -139,7 +148,7 @@
         }
         header.bg-landing:before{
             min-height: 90vh;
-        }
+        }*/
     }
     @media (min-width: 1281px) {
         .text-medium{
@@ -256,7 +265,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-    <header class="bg-landing pt-4 mt-5 d-flex justify-content-center align-items-center section-header-video">
+    <header class="bg-landing pt-4 mt-5 d-block d-sm-flex justify-content-center align-items-center section-header-video">
         <div class="container bg-video mx-0 d-flex justify-content-center">
             <div class="row mb-0 mt-5 px-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
@@ -285,11 +294,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
-        <video autoplay loop muted class="w-100 hidden-sm-down" poster="/img/slide-home/video-main-placeholder.png">
+        <!-- <video autoplay loop muted class="w-100 hidden-sm-down" poster="/img/slide-home/video-main-placeholder.png">
             <source src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="video/mp4">
             <source src="https://www.ictiva.com/homes/video/yoga_video.webm" type="video/webm">
             <embed src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="application/x-shockwave-flash" width="100%" height="570" allowscriptaccess="always" allowfullscreen="true" autoplay="true" showcontrols="0">
-        </video>
+        </video> -->
     </header>
     <section class="container-fluid">
         <div class="row">
